--- a/www/templates/tab-search.html
+++ b/www/templates/tab-search.html
@@ -1,9 +1,17 @@
-<ion-view view-title="Search">
+<ion-view view-title="Results for {{results[0].airportFROM}}">
+  <ion-nav-buttons side="primary">
+      <button class="button" ng-click="goBack()">
+        Back
+      </button>
+  </ion-nav-buttons>
   <ion-content>
     <ion-list>
-          <ion-item ng-repeat="result in results">
-              <h2>Flight to {{result.city}}<h2> [{{result.airport}}]
-              <h3>${{result.price | number:0}}
+          <ion-item class="search-result" ng-repeat="result in results">
+              <h2>Flight to {{result.city}}<h2> [{{result.airportDEST}}]
+              <h3>${{result.price | number:0}}</h3>
+              <button class="button button-positive" style="float:right" ng-click="openLink(result.url)">
+                Book Flight             
+              </button>
           </ion-item>
     </ion-list>
   </ion-content>
