cleaning it up, adding loading animation

--- a/www/templates/tab-form.html
+++ b/www/templates/tab-form.html
@@ -4,7 +4,7 @@
     <div class="list">
       <label class="item item-input">
         <span class="input-label">Departing Airport</span>
-        <input type="text" placeholder="Departing Airport" ng-model="airport">
+        <input type="text" ng-model="airport">
       </label>
       <label class="item item-input">
         <span class="input-label">Maximum Price ($)</span>
@@ -12,7 +12,7 @@
       </label>
       <label class="item item-input">
         <span class="input-label">Depart</span>
-        <input type="date" ng-model="startDate">
+        <input type="date" ng-model="startDate" placeholder="Jan 22 2015">
       </label>
        <label class="item item-input">
         <span class="input-label">Return</span>
@@ -25,6 +25,7 @@
       </button>
       {{test}}
     </div>
+   
   </form>
   </ion-content>
 </ion-view>
