--- a/www/templates/tab-search.html
+++ b/www/templates/tab-search.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Results for {{results[0].airportFROM}}">
   <ion-nav-buttons side="primary">
       <button class="button" ng-click="goBack()">
-        Back
+        <i class="ion-chevron-left" a></i>
       </button>
   </ion-nav-buttons>
   <ion-content>
