design changes to match iOS interface guidelines

--- a/www/templates/tab-form.html
+++ b/www/templates/tab-form.html
@@ -19,13 +19,14 @@
         <input type="date" ng-model="endDate">
       </label>
     </div>
-    <div class="padding">
-      <button class="button button-full button-positive">
-        TRIP ME!      
+    <div class="padding cta">
+      <button class="button button button-clear button-positive">
+        Trip Me!      
       </button>
-      {{test}}
     </div>
-   
+    <div class="padding">
+      {{error}}
+    </div>
   </form>
   </ion-content>
 </ion-view>
